Ingress-basic/app-service.yml

apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip-service
spec:
  type: ClusterIP
  selector:
   app: nginx
  ports:
  - port: 80
    targetPort: 80
